# Secure-Coding-in-Software-Engineering

./: .gitignore  .pre-commit-config.yaml  .prettierrc.yml  LICENSE  README.md  pyproject.toml
docs/: 01. Introduction.md  02. Software Engineering Design & Security Principles.md
scripts/: styles.css
