[project]
name = "secure-coding-in-software-engineering"
version = "0.1.0"
description = "Introductory coursework for learning secure coding in software engineering."
authors = [
    {name = "Syed Mohammad Ibrahim",email = "8592115+iamibi@users.noreply.github.com"}
]
license = {text = "Creative Common License"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
poetry-plugin-shell = ">=1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"


[tool.codespell]
count = true
quiet-level = 3
ignore-regex = 'Covert'
